# grpc-microservice

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
order_service/: Dockerfile
order_service/proto/: order.proto  order_pb2.py  order_pb2.pyi  order_pb2_grpc.py
order_service/src/: database.py  models.py  service.py
user_service/: Dockerfile
user_service/proto/: user.proto  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
user_service/src/: database.py  models.py  service.py
