[tool.poetry]
name = "testgrpc"
version = "0.1.0"
description = ""
authors = ["Uladzislau <uladzislau.savitskiy@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.65.0"
grpcio-tools = "^1.65.0"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
